--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,8 @@
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
-        "laravel/passport": "^11.9",
-        "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8",
-        "lcobucci/jwt": "^4.0",
-        "tymon/jwt-auth": "^2.0.0"
+        "laravel/sanctum": "^3.3",
+        "laravel/tinker": "^2.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
